--- a/CHANGES
+++ b/CHANGES
@@ -1,12 +1,28 @@
 Revision history for Perl extension Graph::Flowchart.
 
+0.06 2005-12-27 Tels 36 tests
+  * require Graph::Easy v0.37
+  * add:
+    + add_goto(), add_break(), add_return(), add_last(), add_new_block()
+    + make_current(), current(), add_new_join(),
+    + N_GOTO N_RETURN N_BREAK N_NEXT N_LAST N_SUB N_USE
+  * connect() can set the edge class, too
+  * set edge classes for: true, false, goto, return, break, last, next
+  * remove dead code relating to setting graph attributes
+  * new_block(): handle label names (for goto)
+  * Node.pm: turn '\n' into '\n' for correct node labels
+  * fix POD of Node.pm
+  * use strict, not warnings in .pm files
+  * add_if_then() and add_if_then_else() return all blocks in list context
+
 0.05 2005-12-19 Tels 23 tests
   * require Graph::Easy v0.36
   * set a subclass for each node
   * set attributes on a per-class basis
-  * fix pod.t and pod_cov.t when POD::Test/Pod::Coverage are not installed
+  * fix pod.t and pod_cov.t when Pod::Test/Pod::Coverage are not installed
   * fix the POD in both .pm files
   * fix README and include example
+  * add_if_then_else() can handle undef else block
   * first_block(), last_block() and current_block() can now also set the block
 
 0.04 2005-12-07 Tels 19 tests
